--- a/streamline-website/public/index.html
+++ b/streamline-website/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://imgur.com/usOsLpl.jpg" />
+    <link rel="icon" href="https://imgur.com/KmbtpPC.jpg" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="CRE Streamline Inc. website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
